Summary of important user-visible changes for specfun 1.2.0:
-------------------------------------------------------------------

 ** The following functions are new:

      big_factorial
      lfactorial
      zernike_cartesian
      zernike_name
      zernike_noll_to_mn
      zernike_polar
      zernike_R_poly

 ** A group of functions to deal with Zernike polynomials have been implemented.
    These are a sequence of polynomials orthogonal on the unit disk. They
    are used, for example, to characterize distortions in optical systems.

 ** The following functions have removed since they now are part of
    Octave core:

      erfcinv

 ** The function `combs' (just imported from the combinatorics package)
    has been deprecated in favour of `nchoosek' from Octave-core which
    should perform faster. The only difference is that it does accept
    string arrays (which does not make a lot of sense in the first place).
    To workaround this, the following can be used:
    
      char (nchoosek (double (n_string), k))

Summary of important user-visible changes for specfun 1.1.0:
-------------------------------------------------------------------

 ** The following functions are new:

      laplacian  multinom  multinom_coeff  multinom_exp

 ** The following function was removed since it is now part of
    GNU octave core:

      erfcx

 ** Help text of most functions has been improved

 ** The function `ellipj' was replaced by a C++ implementation that
    should perform faster.