@@ -23,12 +23,17 @@
 ##                   /
 ##                   x
 ## @end verbatim
-## @seealso{Ci, Si, sinint, expint, expint_Ei}
+## @seealso{sinint, expint, expint_Ei}
 ## @end deftypefn
 
-function y = cosint(z)
+function y = cosint (z)
   if (nargin != 1)
     print_usage;
   endif
-  y = Ci(z);
+  y = z;
+  y(z == 0) = -Inf; 
+  y(real(z) == 0 & imag(z) >0)  = 0.5*(expint_Ei(i.*y(real(z) == 0 & imag(z) >0))+expint_Ei(-i.*y(real(z) == 0 & imag(z) >0)))+ i.*pi./2;
+  y(real(z) == 0 & imag(z) <0) = 0.5*(expint_Ei(i.*y(real(z) == 0 & imag(z) <0))+expint_Ei(-i.*y(real(z) == 0 & imag(z) <0)))-i*pi./2;
+  y(real(z)>=0) = -0.5.*(expint_E1(i.*y(real(z)>=0) )+expint_E1(-i.*y(real(z)>=0) ));
+  y(real(z)<0) = -0.5.*(expint_E1(-i.*y(real(z)<0))+expint_E1(i.*y(real(z)<0)))+i*pi;
 endfunction
