@@ -15,10 +15,31 @@
 
 ## -*- texinfo -*-
 ## @deftypefn {Function File} {@var{y} =} sinint (@var{x})
-## Compute the sine integral function.
-## @seealso{Si}
+## Compute the sine integral defined by:
+## @verbatim
+##                    x
+##                   /
+##       sinint(x) = | sin(t)/t dt
+##                   /
+##                   0
+## @end verbatim
+## @seealso{cosint, expint}
 ## @end deftypefn
 
 function y = sinint (x)
-  y = Si (x);
+  if (nargin != 1)
+    print_usage;
+  endif
+  y = zeros(size(x));
+  if prod(size(x)) < 101
+    for k = 1:prod(size(x))
+      y(k) = sum(besselj([0:100]+0.5,(x(k)/2)).^2);
+    endfor
+    y = y.*pi;
+  else
+    for k=0:100
+      y += besselj(k+0.5,x/2).^2;
+    endfor
+    y = y.*pi;
+  endif
 endfunction
